<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_sourceCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matthew_source_currency"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_destinationCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matthew_destination_currency"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matthew_amount"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_convertedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matthew_converted_amount"
        android:textSize="18sp" />

</LinearLayout>
