<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="net.matthew.converter.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/triviaToolbar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/lanfeiBtnQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/triviaToolbar"
        android:layout_marginTop="16dp"
        android:text="@string/lanfei_qeueryScoresMsg" />

    <EditText
        android:id="@+id/lanfeiTrivianame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lanfeiBtnQuery"
        android:layout_marginTop="10dp"
        android:hint="@string/lanfei_inputNameMsg"
        android:inputType="text" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lanfeiTrivianame"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/lanfeiBtnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lanfei_searchMsg" />

    <Button
        android:id="@+id/lanfei_btnQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lanfeiBtnSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/lanfei_SaveQuizMsg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_queries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lanfei_btnQuiz"
        android:layout_marginTop="16dp" />


</RelativeLayout>
